build-error.txt

> piyush-portfolio@0.1.0 registry:internal:build C:\Users\DELL\OneDrive\Desktop\Portfoilio 2.0\piyush.in
> tsx --tsconfig ./tsconfig.scripts.json ./src/scripts/build-registry.mts

C:\Users\DELL\OneDrive\Desktop\Portfoilio 2.0\piyush.in\src\scripts\build-registry.mts:8
import { registry } from "../registry";
         ^

SyntaxError: The requested module '../registry' does not provide an export named 'registry'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:337:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.19.0
 ELIFECYCLE  Command failed with exit code 1.
